--- a/Home/css/styleswapp.css
+++ b/Home/css/styleswapp.css
@@ -421,7 +421,7 @@ nav img {
   margin: auto;
   border-radius: 30px;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.25);
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 500;
   text-transform: uppercase;
   color: #fff;
@@ -454,7 +454,7 @@ nav img {
   padding:20px;
   border-radius: 30px;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.25);
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 500;
   text-transform: uppercase;
   color: #fff;
@@ -464,7 +464,7 @@ nav img {
 }
 
 .login-with-facebook:hover {
-  background-color: #edf0f5;
+  background-color: #626466;
 }
 
 .login-with-facebook:focus {
